--- a/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/challenge/index.html
+++ b/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/challenge/index.html
@@ -32,30 +32,7 @@
         </section>
         <section class=" content">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore neque beatae et, laudantium dicta sint dolorum aliquid, iure itaque amet autem ex eos! Nostrum eveniet quis minus id odit magnam.
-            Autem recusandae sequi unde illum eos necessitatibus accusantium numquam, tempore vel deserunt, placeat quos, ut quibusdam odit sunt voluptatibus magni praesentium quia cumque suscipit obcaecati labore fuga ducimus. Esse, odit!
-            Cupiditate, quos, eum iusto ipsum dolor amet explicabo earum iste necessitatibus eveniet ut ea sunt quisquam velit maxime assumenda sequi repellendus optio autem corrupti qui, similique at blanditiis? Sed, deleniti.
-            Aliquam doloremque ipsum amet ipsam quis. Fuga aliquam dolorum corporis ducimus expedita, quibusdam eius voluptate! Sunt dolore incidunt eius, nam nulla ipsam optio nobis quod architecto, minus, corporis necessitatibus vel.
-            Assumenda consequatur eaque delectus voluptates nobis reiciendis necessitatibus ipsa, quod iure blanditiis veritatis suscipit dolorum fugiat? Optio, doloribus a! Officiis recusandae non fugiat veritatis quasi ipsum laborum nihil dicta odio.
-            Cumque, iste ad? Quaerat voluptatibus, assumenda in eveniet explicabo culpa. Rerum animi facere eveniet maiores odit, id voluptate omnis et fugit deleniti nisi cumque odio eum ipsum non incidunt vitae!
-            Quisquam nam accusantium adipisci impedit. Esse ullam pariatur facilis repellendus numquam deserunt consequatur nulla, ea similique magnam architecto exercitationem voluptatibus itaque tenetur maiores perferendis dolorum consectetur suscipit cupiditate alias. Dolore?
-            Officiis recusandae unde nemo nostrum asperiores pariatur totam architecto consequuntur error veritatis fuga a odio, voluptate quo ad dicta cumque magni porro voluptas sunt esse laborum! Ipsam impedit ipsum officiis.
-            Eveniet impedit, optio, architecto tempore magnam harum animi error numquam qui ipsum quam dolorem blanditiis id quisquam laboriosam quae corporis earum nesciunt. Ea magni quae sunt porro qui dolorum. Quam!
-            Iure cumque impedit vitae, vero, repudiandae qui est eos ex earum nam deserunt sit reiciendis facere accusamus sapiente sunt soluta tempore! Cum velit magnam dolor accusantium expedita, ipsum quos cupiditate!
-            Ex laborum corporis explicabo minima magni illo labore aspernatur dolor et? Nulla at sapiente quaerat quam sed atque magni placeat quod reprehenderit ex, fugiat, quo eaque est nisi sint eum?
-            Cum officia, totam sapiente impedit pariatur nemo provident eum earum asperiores illum! Dolores rerum ipsa perferendis mollitia, voluptas totam deleniti modi sequi dolore impedit enim sunt voluptate natus facere aliquid!
-            Possimus dolor itaque minima asperiores, expedita beatae facere excepturi at iusto officiis nulla numquam magnam ipsum, laboriosam, ipsa modi ea consequatur aliquid impedit? Numquam aliquid dolor similique quod rerum error!
-            Eum aliquam consequuntur quae quaerat, velit nam magni vero totam molestias sequi qui necessitatibus dolore laudantium perspiciatis magnam, rerum earum dolorum corporis illum quas distinctio quibusdam temporibus iste recusandae. Nesciunt?
-            Neque nesciunt minus sint soluta magni cupiditate animi sit ullam qui doloremque, accusantium temporibus, consectetur cum at ipsam, quis eaque recusandae libero veniam placeat. Voluptatem obcaecati enim eum deleniti asperiores.
-            Quas quisquam pariatur ab repellat optio inventore, nostrum magnam distinctio ad rerum perspiciatis autem in saepe assumenda cum hic odio sapiente dolorem facere doloremque dolorum? Dolorem sunt sequi debitis incidunt?
-            Vero ab, adipisci architecto ipsam at fuga, veritatis nesciunt, maxime laboriosam officia facere quia? Delectus libero, ducimus, sed temporibus quam ea, provident nesciunt vitae doloribus enim veritatis? Aspernatur, corporis accusantium.
-            Mollitia, expedita. Nihil iusto incidunt at. Praesentium nihil ipsam animi vel maiores exercitationem voluptatibus, at velit deserunt voluptate sapiente odit dolorum accusantium iure officiis. Amet nesciunt eaque perferendis saepe totam!
-            Vitae consequatur deleniti debitis, at natus expedita, non voluptas et enim ab dolorum nobis delectus. Repellendus, dicta, delectus quaerat laboriosam veritatis placeat quidem eum dolorem provident nihil beatae quas ut?
-            Harum sed aliquid porro, ipsum consectetur error at fuga reprehenderit aspernatur soluta dolorem perferendis unde. Eaque placeat aliquam ea, temporibus quasi consequuntur recusandae, molestias provident perferendis libero consectetur nisi hic? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id esse quasi repellendus labore quod? Praesentium recusandae odit est, magnam, eaque quia dignissimos nobis voluptas iure suscipit alias assumenda fugit? Consequatur!
-            Tenetur eligendi molestiae dolor rem quidem debitis vero enim reiciendis facere eius ullam iste dignissimos, minus repudiandae veritatis quam modi autem itaque ut rerum a quod aliquid. Labore, est libero.
-            Repellendus vel incidunt fugit et est exercitationem recusandae? Voluptatibus, rem unde. Cumque unde vitae culpa, aliquid nam, accusantium voluptatum numquam explicabo mollitia placeat ab. Fuga quidem autem tenetur recusandae perferendis.
-            Nesciunt sed nihil ducimus possimus, odio fugit vitae consequuntur iste sapiente, fugiat atque autem et commodi omnis deserunt, officia beatae ab. Reiciendis dicta iusto est, animi tempore quia eaque? Explicabo!
-            Id nulla rerum quisquam est nobis aliquid nihil placeat exercitationem vitae fugit voluptatibus, numquam impedit laboriosam esse sit earum autem inventore omnis officiis natus, alias amet cumque beatae provident? Quis.
-            Soluta eos iste asperiores nesciunt officia quod aperiam. Repellendus quae repellat doloremque ut incidunt dolorum est necessitatibus vel? Pariatur saepe error voluptates quis eaque laudantium illum voluptatum nesciunt facilis in.
+            Autem recusandae sequi unde illum eos necessitatibus accusantium numquam, tempore vel deserunt, placeat quos, ut quibusdam odit s in.
             Odio iure saepe doloremque autem id eum ipsa veniam consequatur eligendi illum corporis quae praesentium porro ipsum libero, provident perferendis repudiandae accusamus aliquid eaque vitae, voluptatibus, delectus nam. Porro, rerum.
             Consectetur quas ipsa dolore! Delectus minima illum deleniti consectetur? Facere officiis fuga, maxime optio praesentium, illum ut eos atque porro fugiat sapiente consectetur veniam aperiam ratione exercitationem placeat. Eum, officiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi harum error in quam quos mollitia eaque laudantium sunt impedit. Rem sunt cupiditate necessitatibus sequi odio consequuntur alias. Porro, eligendi iusto?
             Eaque reiciendis consequuntur cumque quasi, magni error. Dolorum quis esse minima dolores molestias tenetur, at veritatis pariatur dolor saepe rem reiciendis tempora. Assumenda, consectetur a laborum reprehenderit enim quod pariatur!
@@ -68,7 +45,8 @@
         </section>
     </main>
     <footer>
-        Contact us
+        <section class="footer-contact">Contact us</section>
+        <section class="footer-info">About us</section>
     </footer>
 </body>
 </html>
