--- a/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/flex/index.html
+++ b/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/flex/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+  <p>display: flex; </p>
+  <p>flex-direction: row;</p>
+  
   <main class="container1">
     <div class="box1 box">
       <p>box1</p>
@@ -30,6 +33,8 @@
     </div>
   </main>
 
+  <p>display: flex; </p>
+  <p>flex-direction: row-reverse;</p>
   <main class="container2">
     <div class="box1 box">
       <p>box1</p>
@@ -51,6 +56,8 @@
     </div>
   </main>
 
+  <p>display: flex; </p>
+  <p>justify-content: center;</p>
   <main class="container3">
     <div class="box1 box">
       <p>box1</p>
@@ -72,6 +79,8 @@
     </div>
   </main>
 
+  <p>display: flex; </p>
+  <p>justify-content: space-between;</p>
   <main class="container4">
     <div class="box1 box">
       <p>box1</p>
@@ -93,6 +102,8 @@
     </div>
   </main>
 
+  <p>display: flex; </p>
+  <p>justify-content: space-around;</p>
   <main class="container5">
     <div class="box1 box">
       <p>box1</p>
@@ -114,6 +125,8 @@
     </div>
   </main>
 
+  <p>display: flex; </p>
+  <p>justify-content: space-evenly;</p>
   <main class="container6">
     <div class="box1 box">
       <p>box1</p>
@@ -134,6 +147,6 @@
       <p>box6</p>
     </div>
   </main>
-  
+
 </body>
 </html>
