--- a/curso_definitivo_html_css/accesibilidad/labelsAltTitle/index.html
+++ b/curso_definitivo_html_css/accesibilidad/labelsAltTitle/index.html
@@ -20,7 +20,7 @@
             </label>
             <label for="time">
                 <span>A que hora estudias</span>
-                <input id="time" type="time">
+                <input id="time" type="datetime-local">
             </label>
         </form>
 
