--- a/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/HTML/claseForms/index.html
+++ b/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/HTML/claseForms/index.html
@@ -9,7 +9,7 @@
     <form action="">
       <label for="nombre">
         <span>¿Cual es tu nombre?</span>
-        <input type="text" id="nombre" placeholder="Tu nombre" />
+        <input autocomplete="name" type="text" id="nombre" placeholder="Tu nombre" />
       </label>
       <label for="inicio-platzi">
         <span>¿Qué día comenzaste en Platzi?</span>
